# svarog

./: .env  .gitignore  Cargo.toml  README.md
src/: events.rs  main.rs
src/rig/: chat_service.rs  chunking.rs  client.rs  document.rs  ingestion.rs  ingestion_service.rs  knowledge.rs  knowledge_source.rs  mod.rs  request_handler.rs  retrieval.rs
src/rig/knowledge/: chunks.rs  documents.rs  hashes.rs  mod.rs  schema.rs
src/tui/: app.rs  events.rs  inputs.rs  mod.rs  renderer.rs  theme.rs
