[package]
name = "svarog"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dotenvy = "0.15.7"
pdf-extract = "0.12.0"
ratatui = "0.30.2"
rig = "0.39.0"
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
surrealdb = { version = "3.1.5", features = ["kv-rocksdb"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
